# discord-flows

./: .gitignore
demo/: Cargo.toml
demo/src/: lib.rs
integration/: Cargo.toml  schema.sql
integration/src/: common.rs  handler.rs  lib.rs  main.rs  model.rs  shared.rs  state.rs  utils.rs
integration/src/route/: access.rs  auth.rs  connected.rs  event.rs  listen.rs  mod.rs  proxy.rs  revoke.rs
integration/static/: README.md
sdk/: Cargo.toml  README.md
sdk/examples/: basic.rs
sdk/lib/: Cargo.toml
sdk/lib/src/: lib.rs
sdk/lib/src/http/: error.rs  multipart.rs  request.rs  routing.rs
sdk/macros/: Cargo.toml
sdk/macros/src/: lib.rs
sdk/src/: lib.rs  model.rs
sdk/src/http/: client.rs  mod.rs  routing.rs  typing.rs  utils.rs
wasi/: Cargo.toml
wasi/src/: lib.rs
