[package]
name = "discord-flows" # as shuttle.rs project name
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.15"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }

serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
once_cell = "1.17.1"
uuid = { version = "1.3.1", features = ["v4"] }
lru = "0.10.0"
itertools = "0.10.5"

serenity = { version = "0.11.5", default-features = false, features = ["client", "rustls_backend", "model", "gateway"] }
upstash-redis-rs = { path = "../../../cloned/upstash-redis-rs" }

env_logger = { version = "0.10.0", optional = true }

[features]
debug = ["env_logger"]
