[package]
name = "discord-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.15"
tokio = "1.27.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }

serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
mime_guess = "2.0.4"
include_dir = "0.7.3"

reqwest = { version = "0.11.16", features = ["json"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "rustls_backend", "model", "gateway"] }

once_cell = "1.17.1"

env_logger = { version = "0.10.0", optional = true }
lazy_static = "1"

jsonwebtoken = "8"
serde_urlencoded = "0.7"

[features]
debug = ["env_logger"]

[lib]
path = "src/lib.rs"
