[package]
name = "discord-wasi"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Discord integration for flows.network"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
http_req_wasi = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-flows = { path = "../sdk" }
