[package]
name = "discord-flows"
version = "0.6.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Discord extension for flows.network"
documentation = "https://docs.rs/discord-flows"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "wasm32-wasi"

[dependencies]
async-trait = "0.1"
const_format = "0.2.30"
flowsnet-platform-sdk = "0.1.4"
http_req_wasi = "0.10.2"
lazy_static = "1"
percent-encoding = ">=2.1.0, <2.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11.5", default-features = false }
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.37"
url = "2"

discord-flows-macros = { path = "../macros" }

