[package]
name = "discord-flows-macros"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Discord Integration macros for flows.network"
documentation = "https://docs.rs/discord-flows-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_json = "1"
serenity = { version = "0.11.5", default-features = false }
syn = { version = "2.0", features = ["full"] }
